Mobile Spacing Issues

--- a/css/style.css
+++ b/css/style.css
@@ -277,6 +277,7 @@ h3 {
     }
     .course p{
         font-size: 14px;
+        padding: 0px;
     }
 } 
 
@@ -433,7 +434,6 @@ h3 {
     cursor: pointer;
     transition: 1s;
 }
-
     .cta-btn:hover {
         border: 1px solid #fff;
         background: transparent;
